# kindlecast

./: .gitignore  Cargo.toml  README.md
assets/: kindle.css
docs/plans/: reddit-captured-dom-fallback.md
extension/: background.js  manifest.json  popup.html  popup.js
src/: cli.rs  config.rs  email.rs  epub.rs  install.rs  main.rs  model.rs  native_host.rs  render.rs
src/sites/: article.rs  hackernews.rs  lobsters.rs  mod.rs  reddit.rs
src/sites/fixtures/: hn_item_small.json  reddit_blocked.html  reddit_current_nested.html  reddit_current_small.html  reddit_current_wrapper.html  reddit_old_small.html  reddit_post_small.json
