[package]
name = "kindlecast"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
dom_smoothie = "0.18"
html-escape = "0.2"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
ureq = { version = "3", features = ["json"] }
